# openai-client-cli

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: main.yml
data/: openai-openapi-paths-regex
docs/: manual-help.md
src/: lib.rs  main.rs
src/program/: entry.rs  mod.rs
src/program/loaders/: key.rs  method.rs  mod.rs  organization.rs  output.rs  parameter.rs  path.rs
src/program/traits/: from_file.rs  loader.rs  mod.rs
src/service/: client.rs  mod.rs  request.rs
tests/: .env  mod.rs  openai.env  openai.json
tests/program/: loaders.rs
