[package]
name = "openai-cli"
authors = ["Asher Jingkong Chen"]
description = "The wrapper CLI for OpenAI's API service."
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
eventsource-stream = "0.2.3"
futures-util = "0.3.29"
http = "0.2.9"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
shellexpand = { version = "3.1.0", features = ["path"] }
tokio = { version = "1.34.0", features = ["rt", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
url = "2.4.1"

[build-dependencies]
anyhow = "1.0.75"
regex = "1.10.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"
