[package]
name = "openai-client-cli"
authors = ["Asher Jingkong Chen"]
categories = [
  "api-bindings",
  "command-line-interface",
  "command-line-utilities",
  "multimedia",
  "parsing",
]
description = "OpenAI API client CLI"
documentation = "https://docs.rs/openai-client-cli"
edition = "2021"
keywords = ["openai", "api", "client", "cli", "chatgpt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AsherJingkongChen/openai-client-cli.git"
resolver = "2"
rust-version = "1.72.0"
version = "0.1.1"

[lib]
doctest = false

[[bin]]
name = "openai-client"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
eventsource-stream = "0.2.3"
futures-util = "0.3.29"
http = "0.2.9"
mime = "0.3.17"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
shellexpand = { version = "3.1.0", features = ["path"] }
tokio = { version = "1.34.0", features = ["rt", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
url = "2.4.1"

[build-dependencies]
anyhow = "1.0.75"
regex = "1.10.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"

[profile.release]
lto = true
